# HighFiveBot

./: README.md
.docs/: high_five_bot_diag.drawio
Scene_objects/: back_wall.scene  base.scene  cube_left.scene  final_scene.scene  plate_on_desk.scene
SimpSmallHand/: model.config  model.sdf  simplify_hand.stl
high_five_bot_driver/: package.xml  setup.cfg  setup.py
high_five_bot_driver/high_five_bot_driver/: high_five_bot_driver.py
high_five_bot_perception/: CMakeLists.txt  package.xml
pcl/: CMakeLists.txt  README.md  hand_bin.pcd  main.cpp  scene_3_hands_bin.pcd
point_cloud_processing/: CMakeLists.txt  README.md  hand_ascii.pcd  package.xml  scene_bin.pcd
point_cloud_processing/include/: pcl_converter.h
point_cloud_processing/src/: main.cpp  pcl_converter.cpp  recognise.cpp
sam_bot_description/: README.md  package.xml  scena
sam_bot_description/launch/: display.launch.py
sam_bot_description/src/description/: sam_bot_description.urdf
ur_description/config/: initial_positions.yaml
ur_description/urdf/: camera.xacro  ur.urdf.xacro  ur_macro.xacro
ur_moveit_config/rviz/: view_robot.rviz
ur_simulation_gazebo/: world_with_hand.sdf
ur_simulation_gazebo/launch/: ur_sim_control.launch.py  ur_sim_moveit.launch.py
